# descartes

./: CMakeLists.txt  README.md  Test.pas  conanfile.txt
.github/workflows/: cmake.yml  codeql-analysis.yml
lib/: Ast.cpp  Ast.h  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  Environment.cpp  Environment.h  Interfaces.cpp  Interfaces.h  Ir.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Semantic.cpp  Semantic.h  SymbolTable.cpp  SymbolTable.h  Translate.cpp  Translate.h
src/: CMakeLists.txt  descartes.cpp
test/: CMakeLists.txt  LexerTest.cpp  ParserTest.cpp  SemanticTest.cpp
